# isa

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
isa/: __init__.py  isa.py
tests/: test_integration.py  test_metrics.py  test_property.py
