[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isa"
version = "0.0.1"
dependencies = []
requires-python = ">=3.7"
authors = [
  {name = "Giuseppe Blunda", email = "giuseppe.blunda@edu.unife.it"}
]
maintainers = [
  {name = "Giuseppe Blunda", email = "giuseppe.blunda@edu.unife.it"}
]
description = "Computes error metrics on the command line"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["matrics"]

[project.scripts]
isa = "isa:main"